feat: ported to 1.21 (#57)