@@ -1,12 +1,19 @@
 package se.gory_moon.player_mobs.utils;
 
+import com.mojang.authlib.GameProfile;
+import com.mojang.authlib.GameProfileRepository;
+import com.mojang.authlib.ProfileLookupCallback;
+import com.mojang.authlib.exceptions.AuthenticationException;
+import com.mojang.authlib.yggdrasil.ProfileNotFoundException;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
 import net.minecraft.Util;
+import net.minecraft.core.UUIDUtil;
 import net.minecraft.server.MinecraftServer;
-import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.event.TickEvent;
-import net.minecraftforge.server.ServerLifecycleHooks;
+import net.minecraft.server.players.GameProfileCache;
+import net.neoforged.neoforge.common.NeoForge;
+import net.neoforged.neoforge.event.tick.ServerTickEvent;
+import net.neoforged.neoforge.server.ServerLifecycleHooks;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import se.gory_moon.player_mobs.Configs;
@@ -15,14 +22,13 @@ import javax.annotation.Nullable;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
-import java.util.Collections;
-import java.util.Optional;
-import java.util.Queue;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.stream.Collectors;
 
 public class NameManager {
 
@@ -45,7 +51,7 @@ public class NameManager {
 
     public void init() {
         if (!setup) {
-            MinecraftForge.EVENT_BUS.addListener(this::serverTick);
+            NeoForge.EVENT_BUS.addListener(this::serverTick);
             setup = true;
             updateNameList();
         }
@@ -54,7 +60,7 @@ public class NameManager {
     public PlayerName getRandomName() {
         PlayerName name = namePool.poll();
         if (name == null)
-            name = new PlayerName("Gory_Moon");
+            name = PlayerName.create("Gory_Moon");
         useName(name);
         return name;
     }
@@ -69,7 +75,7 @@ public class NameManager {
 
     public Optional<PlayerName> findName(String name) {
         for (PlayerName playerName : allNames) {
-            if (playerName.getDisplayName().equalsIgnoreCase(name))
+            if (playerName.displayName().equalsIgnoreCase(name))
                 return Optional.of(playerName);
         }
         return Optional.empty();
@@ -78,14 +84,14 @@ public class NameManager {
     private void updateNameList() {
         Set<PlayerName> allNames = new ObjectOpenHashSet<>();
         for (String name : Configs.COMMON.mobNames.get()) {
-            allNames.add(new PlayerName(name));
+            allNames.add(PlayerName.create(name));
         }
         allNames.addAll(remoteNames);
 
         MinecraftServer server = ServerLifecycleHooks.getCurrentServer();
         if (setup && Configs.COMMON.useWhitelist.get() && server != null) {
             for (String name : server.getPlayerList().getWhiteListNames()) {
-                allNames.add(new PlayerName(name));
+                allNames.add(PlayerName.create(name));
             }
         }
 
@@ -93,7 +99,7 @@ public class NameManager {
         this.allNames.clear();
         this.allNames.addAll(allNames);
 
-        if (namePool.size() > 0) {
+        if (!namePool.isEmpty()) {
             allNames.removeAll(usedNames);
             allNames.removeAll(namePool);
         } else {
@@ -105,15 +111,13 @@ public class NameManager {
     }
 
     // SubscribeEvent
-    private void serverTick(TickEvent.ServerTickEvent event) {
-        if (event.phase == TickEvent.Phase.END) {
-            syncTime++;
+    private void serverTick(ServerTickEvent.Post event) {
+        syncTime++;
 
-            if (tickTime > 0 && syncTime >= tickTime || firstSync) {
-                syncTime = 0;
-                firstSync = false;
-                reloadRemoteLinks();
-            }
+        if (tickTime > 0 && syncTime >= tickTime || firstSync) {
+            syncTime = 0;
+            firstSync = false;
+            reloadRemoteLinks(event.getServer());
         }
     }
 
@@ -122,7 +126,7 @@ public class NameManager {
         updateNameList();
     }
 
-    public CompletableFuture<Integer> reloadRemoteLinks() {
+    public CompletableFuture<Integer> reloadRemoteLinks(MinecraftServer server) {
         if (syncFuture != null && !syncFuture.isDone())
             return CompletableFuture.completedFuture(0);
 
@@ -130,11 +134,11 @@ public class NameManager {
             Set<PlayerName> nameList = new ObjectOpenHashSet<>();
             for (String link : Configs.COMMON.nameLinks.get()) {
                 try {
-                    URL url = new URL(link);
+                    URL url = URI.create(link).toURL();
                     try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
                         String line;
                         while ((line = reader.readLine()) != null) {
-                            nameList.add(new PlayerName(line));
+                            nameList.add(PlayerName.create(line));
                         }
                     }
                 } catch (IOException e) {
@@ -151,6 +155,54 @@ public class NameManager {
             });
             return diff;
         }, Util.backgroundExecutor());
+        syncFuture.thenAccept(i -> updateUserProfileCache(server));
+
         return syncFuture;
+    }
+
+    private void updateUserProfileCache(MinecraftServer server) {
+        GameProfileCache profileCache = server.getProfileCache();
+        GameProfileRepository profileRepository = server.getProfileRepository();
+
+        if (profileCache == null) return;
+
+        ProfileLookupCallback profilelookupcallback = new ProfileLookupCallback() {
+            @Override
+            public void onProfileLookupSucceeded(GameProfile gameProfile) {
+                profileCache.add(gameProfile);
+                try {
+                    Thread.sleep(2500);
+                } catch (final InterruptedException ignored) {
+                }
+            }
+
+            @Override
+            public void onProfileLookupFailed(String username, Exception e) {
+                if (e instanceof AuthenticationException authException && authException.getMessage().contains("429"))
+                    LOGGER.warn("Could not lookup user entry for {}, probably because of rate-limit from mojang", username);
+                if (e instanceof ProfileNotFoundException)
+                    profileCache.add(UUIDUtil.createOfflineProfile(username));
+                try {
+                    Thread.sleep(5000);
+                } catch (final InterruptedException ignored) {
+                }
+            }
+        };
+
+        while (true) {
+            Set<String> names = profileCache.profilesByName.keySet();
+            var nonCachedNames = allNames.stream()
+                    .map(p -> p.skinName().toLowerCase(Locale.ROOT))
+                    .collect(Collectors.partitioningBy(names::contains)).get(false)
+                    .toArray(String[]::new);
+
+            if (nonCachedNames.length == 0) return;
+
+            if (server.usesAuthentication())
+                profileRepository.findProfilesByNames(nonCachedNames, profilelookupcallback);
+            else
+                for (String name : nonCachedNames)
+                    profileCache.add(UUIDUtil.createOfflineProfile(name));
+        }
     }
 }
